name:                naver-unse
version:             0.1.0.0
synopsis:            Haskell wrapper of unofficial Naver daily fortune telling API
description:         See README.md
homepage:            http://github.com/kuc2477/naver-unse#readme
license:             BSD3
license-file:        LICENSE
author:              Ha Junsoo
maintainer:          kuc2477@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Naver.Fortune
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wreq
  default-language:    Haskell2010

executable naver-unse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , naver-unse
  default-language:    Haskell2010

test-suite naver-unse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , naver-unse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kuc2477/naver-unse
